--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
         "test": "vitest -c ./webapp/vite.config.js"
     },
     "dependencies": {
+        "@fontsource/roboto": "^5.1.0",
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@mui/material": "^6.1.1",
+        "@mui/styled-engine-sc": "^6.1.1",
         "@tauri-apps/api": "^1.6.0",
+        "polished": "^4.3.1",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "styled-components": "^6.1.13"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.6.2",
