--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -25,6 +25,7 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
+      "@mui/styled-engine": ["../node_modules/@mui/styled-engine-sc"],
       "~/*": ["./src/*"]
     }
   }
