--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@fontsource/roboto": "^5.1.0",
         "@fortawesome/fontawesome-free": "^6.6.0",
+        "@monaco-editor/react": "^4.6.0",
         "@mui/material": "^6.1.1",
         "@mui/styled-engine-sc": "^6.1.1",
         "@tauri-apps/api": "^1.6.0",
