--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,21 @@
 [package]
 name = "unichat"
 version = "0.1.0"
-description = "Just a simple streamer companion"
+description = "An implementation of multi-chat with twitch and youtube"
 authors = ["Voguh <voguhofc@protonmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "tauri_app_lib"
+crate-type = ["lib", "cdylib", "staticlib"]
+
 [build-dependencies]
-tauri-build = { version = "1.5.1", features = [] }
+tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
-tauri = { version = "1.6.1", features = [ "shell-open" ] }
+tauri = { version = "2.0.0-rc", features = [] }
+tauri-plugin-shell = "2.0.0-rc"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
-
-[features]
-# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
