--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
         "@monaco-editor/react": "^4.6.0",
         "@mui/material": "^6.1.1",
         "@mui/styled-engine-sc": "^6.1.1",
-        "@tauri-apps/api": "^1.6.0",
+        "@tauri-apps/api": ">=2.0.0-rc.0",
+        "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
         "polished": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "styled-components": "^6.1.13"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^1.6.2",
+        "@tauri-apps/cli": ">=2.0.0-rc.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@types/react": "^18.3.8",
