--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "unichat"
 version = "0.1.0"
 description = "An implementation of multi-chat with twitch and youtube"
 authors = ["Voguh <voguhofc@protonmail.com>"]
+license = "LGPL-3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,5 +18,6 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 [dependencies]
 tauri = { version = "2.0.0-rc", features = [] }
 tauri-plugin-shell = "2.0.0-rc"
+tauri-plugin-store = "2.0.0-rc"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
