--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "dependencies": {
         "@fontsource/roboto": "^5.1.0",
-        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@fortawesome/fontawesome-free": "5.15.4",
         "@monaco-editor/react": "^4.6.0",
         "@mui/material": "^6.1.1",
         "@mui/styled-engine-sc": "^6.1.1",
@@ -24,6 +24,7 @@
         "polished": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-toastify": "^10.0.5",
         "styled-components": "^6.1.13"
     },
     "devDependencies": {
