--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
 tauri = { version = "2.0.0-rc", features = [] }
-tauri-plugin-shell = "2.0.0-rc"
-tauri-plugin-store = "2.0.0-rc"
+tauri-plugin-sql = { version = "2.0.0-rc.2", features = ["sqlite"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+sqlx = "0.8.2"
