--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "unichat",
-    "license": "LGPL-3.0-only",
+    "private": true,
     "type": "module",
     "scripts": {
         "dev": "tauri dev",
@@ -18,9 +18,6 @@
         "@mui/material": "^6.1.1",
         "@mui/styled-engine-sc": "^6.1.1",
         "@tauri-apps/api": ">=2.0.0-rc.0",
-        "@tauri-apps/plugin-shell": ">=2.0.0-rc.0",
-        "@tauri-apps/plugin-store": ">=2.0.0-rc.0",
-        "axios": "^1.7.7",
         "polished": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
