--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ crate-type = ["lib", "cdylib", "staticlib"]
 tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = [] }
+tauri = { version = "2.0.0-rc", features = ["unstable"] }
 tauri-plugin-sql = { version = "2.0.0-rc.2", features = ["sqlite"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
