chore: update packages

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "@monaco-editor/react": "^4.6.0",
         "@mui/material": "^6.1.1",
         "@mui/styled-engine-sc": "^6.1.1",
-        "@tauri-apps/api": ">=2.0.0-rc.0",
-        "@tauri-apps/plugin-store": ">=2.0.0-rc.0",
+        "@tauri-apps/api": "^2.0.0-rc.0",
+        "@tauri-apps/plugin-store": "^2.0.0-rc.0",
         "polished": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -26,14 +26,14 @@
         "styled-components": "^6.1.13"
     },
     "devDependencies": {
-        "@tauri-apps/cli": ">=2.0.0-rc.0",
+        "@tauri-apps/cli": "^2.0.0-rc.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@types/react": "^18.3.10",
         "@types/react-dom": "^18.3.0",
-        "@typescript-eslint/eslint-plugin": "^8.7.0",
-        "@typescript-eslint/parser": "^8.7.0",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@typescript-eslint/eslint-plugin": "^8.8.0",
+        "@typescript-eslint/parser": "^8.8.0",
+        "@vitejs/plugin-react": "^4.3.2",
         "eslint": "^8.39.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard": "^17.1.0",
@@ -42,7 +42,7 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.37.0",
+        "eslint-plugin-react": "^7.37.1",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-vitest": "^0.5.4",
         "jsdom": "^25.0.1",
