--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 [dependencies]
 tauri = { version = "2.0.0-rc", features = ["unstable"] }
 tauri-plugin-store = "2.0.0-rc"
+tauri-plugin-log = "2.0.0-rc"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
