--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/material": "^6.1.1",
         "@mui/styled-engine-sc": "^6.1.1",
         "@tauri-apps/api": "^2.0.0-rc.0",
+        "@tauri-apps/plugin-log": "^2.0.0-rc.0",
         "@tauri-apps/plugin-store": "^2.0.0-rc.0",
         "polished": "^4.3.1",
         "react": "^18.3.1",
