--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,10 @@ name = "tauri_app_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "2.0.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = ["unstable"] }
-tauri-plugin-store = "2.0.0-rc"
-tauri-plugin-log = "2.0.0-rc"
+tauri = { version = "2.0.0", features = ["unstable"] }
+tauri-plugin-store = "2.0.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
