--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
         "@fontsource/roboto": "^5.1.0",
         "@fortawesome/fontawesome-free": "5.15.4",
         "@monaco-editor/react": "^4.6.0",
-        "@mui/material": "^6.1.1",
-        "@mui/styled-engine-sc": "^6.1.1",
-        "@tauri-apps/api": "^2.0.0-rc.0",
-        "@tauri-apps/plugin-log": "^2.0.0-rc.0",
-        "@tauri-apps/plugin-store": "^2.0.0-rc.0",
+        "@mui/material": "^6.1.2",
+        "@mui/styled-engine-sc": "^6.1.2",
+        "@tauri-apps/api": "^2.0.0",
+        "@tauri-apps/plugin-store": "^2.0.0",
         "polished": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -27,10 +26,10 @@
         "styled-components": "^6.1.13"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2.0.0-rc.0",
+        "@tauri-apps/cli": "^2.0.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
-        "@types/react": "^18.3.10",
+        "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
@@ -50,6 +49,6 @@
         "prettier": "^3.3.3",
         "typescript": "^5.6.2",
         "vite": "^5.4.8",
-        "vitest": "^2.1.1"
+        "vitest": "^2.1.2"
     }
 }
