--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,8 @@ tauri-build = { version = "2.0", features = [] }
 [dependencies]
 tauri = { version = "2.0", features = ["unstable"] }
 tauri-plugin-store = "2.0"
+tauri-plugin-clipboard-manager = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+warp = "0.3"
+tokio = { version = "1.40", features = ["full"] }
