--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "dependencies": {
         "@fontsource/roboto": "^5.1.0",
         "@fortawesome/fontawesome-free": "5.15.4",
-        "@monaco-editor/react": "^4.6.0",
         "@mui/material": "^6.1.2",
         "@mui/styled-engine-sc": "^6.1.2",
         "@tauri-apps/api": "^2.0.0",
+        "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
         "@tauri-apps/plugin-store": "^2.0.0",
         "polished": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.0",
         "react-toastify": "^10.0.5",
         "styled-components": "^6.1.13"
     },
