--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ crate-type = ["lib", "cdylib", "staticlib"]
 tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.0", features = ["unstable"] }
-tauri-plugin-store = "2.0"
-tauri-plugin-clipboard-manager = "2.0"
+actix-web = "4.9"
+actix-files = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-warp = "0.3"
+tauri = { version = "2.0", features = ["unstable"] }
+tauri-plugin-clipboard-manager = "2.0"
+tauri-plugin-store = "2.0"
 tokio = { version = "1.40", features = ["full"] }
