--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,10 @@ crate-type = ["lib", "cdylib", "staticlib"]
 tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-actix-web = "4.9"
 actix-files = "0.6"
+actix-web = "4.9"
+actix-ws = "0.3"
+bytestring = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = { version = "2.0", features = ["unstable"] }
