--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ actix-files = "0.6"
 actix-web = "4.9"
 actix-ws = "0.3"
 bytestring = "1.3.1"
+futures-util = "0.3.31"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = { version = "2.0", features = ["unstable"] }
