--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unichat"
 version = "0.1.0"
-description = "An implementation of multi-chat with twitch and youtube"
+description = "Yet another implementation of YouTube chat overlay"
 authors = ["Voguh <voguhofc@protonmail.com>"]
 license = "LGPL-3.0"
 edition = "2021"
@@ -23,6 +23,7 @@ bytestring = "1.3.1"
 futures-util = "0.3.31"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+showfile = "0.1.1"
 tauri = { version = "2.0", features = ["unstable"] }
 tauri-plugin-clipboard-manager = "2.0"
 tauri-plugin-store = "2.0"
