--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ showfile = "0.1.1"
 tauri = { version = "2.0", features = ["unstable"] }
 tauri-plugin-clipboard-manager = "2.0"
 tauri-plugin-store = "2.0"
+tokio = "1.40"
