refactor: rename alias in front-end

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -26,7 +26,7 @@
     "baseUrl": ".",
     "paths": {
       "@mui/styled-engine": ["../node_modules/@mui/styled-engine-sc"],
-      "~/*": ["./src/*"]
+      "unichat/*": ["./src/*"]
     }
   }
 }
