--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,11 @@ actix-files = "0.6.6"
 actix-web = "4.9.0"
 actix-ws = "0.3.0"
 futures-util = "0.3.31"
+log = "0.4.22"
 serde = { version = "1.0.213", features = ["derive"] }
 serde_json = "1.0.132"
 showfile = "0.1.1"
 tauri = { version = "2.0.6", features = ["unstable"] }
-tauri-plugin-clipboard-manager = "2.0.1"
+tauri-plugin-log = "2.0.1"
 tauri-plugin-store = "2.1.0"
 tokio = "1.41.0"
