--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@mui/material": "^6.1.5",
         "@mui/styled-engine-sc": "^6.1.5",
         "@tauri-apps/api": "^2.0.3",
-        "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
+        "@tauri-apps/plugin-log": "^2.0.0",
         "@tauri-apps/plugin-store": "^2.1.0",
         "polished": "^4.3.1",
         "react": "^18.3.1",
