--- a/package.json
+++ b/package.json
@@ -11,45 +11,48 @@
         "lint": "eslint --ext ts,tsx ./webapp/src",
         "test": "vitest -c ./webapp/vite.config.js"
     },
+    "pnpm": {
+        "onlyBuiltDependencies": ["esbuild"]
+    },
     "dependencies": {
-        "@fontsource/roboto": "^5.1.0",
+        "@fontsource/roboto": "5.2.5",
         "@fortawesome/fontawesome-free": "5.15.4",
-        "@mui/material": "^6.1.6",
-        "@mui/styled-engine-sc": "^6.1.6",
-        "@tauri-apps/api": "^2.0.3",
-        "@tauri-apps/plugin-log": "^2.0.0",
-        "@tauri-apps/plugin-store": "^2.1.0",
-        "polished": "^4.3.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-hook-form": "^7.53.1",
-        "react-toastify": "^10.0.6",
-        "styled-components": "^6.1.13"
+        "@mui/material": "6.4.6",
+        "@mui/styled-engine-sc": "6.4.6",
+        "@tauri-apps/api": "2.3.0",
+        "@tauri-apps/plugin-log": "2.2.3",
+        "@tauri-apps/plugin-store": "2.2.0",
+        "polished": "4.3.1",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-hook-form": "7.54.2",
+        "react-toastify": "10.0.6",
+        "styled-components": "6.1.15"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2.0.4",
-        "@testing-library/jest-dom": "^6.6.2",
-        "@testing-library/react": "^16.0.1",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "@typescript-eslint/eslint-plugin": "^8.12.2",
-        "@typescript-eslint/parser": "^8.12.2",
-        "@vitejs/plugin-react": "^4.3.3",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-config-standard": "^17.1.0",
-        "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-import-helpers": "^1.3.1",
-        "eslint-plugin-n": "^16.6.2",
-        "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-vitest": "^0.5.4",
-        "jsdom": "^25.0.1",
-        "prettier": "^3.3.3",
-        "typescript": "^5.6.3",
-        "vite": "^5.4.10",
-        "vitest": "^2.1.4"
+        "@tauri-apps/cli": "2.3.1",
+        "@testing-library/jest-dom": "6.6.3",
+        "@testing-library/react": "16.2.0",
+        "@types/react": "18.3.16",
+        "@types/react-dom": "18.3.5",
+        "@typescript-eslint/eslint-plugin": "8.26.0",
+        "@typescript-eslint/parser": "8.26.0",
+        "@vitejs/plugin-react": "4.3.4",
+        "eslint": "8.57.1",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-config-standard": "17.1.0",
+        "eslint-plugin-import": "2.31.0",
+        "eslint-plugin-import-helpers": "1.3.1",
+        "eslint-plugin-n": "16.6.2",
+        "eslint-plugin-prettier": "5.2.3",
+        "eslint-plugin-promise": "6.1.1",
+        "eslint-plugin-react": "7.37.4",
+        "eslint-plugin-react-hooks": "4.6.2",
+        "eslint-plugin-vitest": "0.5.4",
+        "jsdom": "25.0.1",
+        "prettier": "3.5.3",
+        "typescript": "5.8.2",
+        "vite": "6.2.0",
+        "vitest": "3.0.7"
     }
 }
