--- a/package.json
+++ b/package.json
@@ -11,33 +11,39 @@
         "lint": "eslint --ext ts,tsx ./webapp/src",
         "test": "vitest -c ./webapp/vite.config.js"
     },
+    "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
     "pnpm": {
-        "onlyBuiltDependencies": ["esbuild"]
+        "onlyBuiltDependencies": [
+            "@swc/core",
+            "esbuild"
+        ]
     },
     "dependencies": {
-        "@fontsource/roboto": "5.2.5",
+        "@fontsource/nunito-sans": "5.2.5",
         "@fortawesome/fontawesome-free": "5.15.4",
         "@mui/material": "6.4.6",
         "@mui/styled-engine-sc": "6.4.6",
         "@tauri-apps/api": "2.3.0",
-        "@tauri-apps/plugin-log": "2.2.3",
         "@tauri-apps/plugin-store": "2.2.0",
+        "normalize.css": "8.0.1",
         "polished": "4.3.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.54.2",
         "react-toastify": "10.0.6",
-        "styled-components": "6.1.15"
+        "styled-components": "6.1.16"
     },
     "devDependencies": {
+        "@swc/plugin-styled-components": "7.1.0",
         "@tauri-apps/cli": "2.3.1",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.2.0",
-        "@types/react": "18.3.16",
+        "@types/node": "22.13.10",
+        "@types/react": "18.3.18",
         "@types/react-dom": "18.3.5",
-        "@typescript-eslint/eslint-plugin": "8.26.0",
-        "@typescript-eslint/parser": "8.26.0",
-        "@vitejs/plugin-react": "4.3.4",
+        "@typescript-eslint/eslint-plugin": "8.27.0",
+        "@typescript-eslint/parser": "8.27.0",
+        "@vitejs/plugin-react-swc": "3.8.1",
         "eslint": "8.57.1",
         "eslint-config-prettier": "9.1.0",
         "eslint-config-standard": "17.1.0",
@@ -45,14 +51,14 @@
         "eslint-plugin-import-helpers": "1.3.1",
         "eslint-plugin-n": "16.6.2",
         "eslint-plugin-prettier": "5.2.3",
-        "eslint-plugin-promise": "6.1.1",
+        "eslint-plugin-promise": "6.6.0",
         "eslint-plugin-react": "7.37.4",
-        "eslint-plugin-react-hooks": "4.6.2",
+        "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-vitest": "0.5.4",
-        "jsdom": "25.0.1",
+        "jsdom": "26.0.0",
         "prettier": "3.5.3",
         "typescript": "5.8.2",
-        "vite": "6.2.0",
-        "vitest": "3.0.7"
+        "vite": "6.2.2",
+        "vitest": "3.0.9"
     }
 }
