--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@mui/material": "6.4.6",
         "@mui/styled-engine-sc": "6.4.6",
         "@tauri-apps/api": "2.3.0",
+        "@tauri-apps/plugin-log": "2.3.1",
         "@tauri-apps/plugin-store": "2.2.0",
         "normalize.css": "8.0.1",
         "polished": "4.3.1",
