--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
         "lint": "eslint --ext ts,tsx ./webapp/src",
         "test": "vitest -c ./webapp/vite.config.js"
     },
-    "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
+    "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "pnpm": {
         "onlyBuiltDependencies": [
+            "@fortawesome/fontawesome-free",
             "@swc/core",
             "esbuild"
         ]
