--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "unichat"
 version = "0.1.0"
 description = "Yet another implementation of YouTube chat overlay"
 authors = ["Voguh <voguhofc@protonmail.com>"]
-license = "LGPL-3.0"
+license = "LGPL-3.0-only"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
