--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ log = "0.4.27"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 showfile = "0.1.1"
-tauri = { version = "2.5.1", features = ["unstable"] }
+tauri = { version = "2.5.1", features = [] }
 tauri-plugin-log = "2.4.0"
 tauri-plugin-store = "2.2.0"
 tokio = "1.45.0"
