--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
         ]
     },
     "dependencies": {
-        "@fontsource/nunito-sans": "5.2.5",
+        "@fontsource/roboto": "5.2.5",
+        "@fontsource/roboto-mono": "5.2.5",
         "@fortawesome/fontawesome-free": "5.15.4",
         "@mui/material": "7.1.0",
         "@mui/styled-engine-sc": "7.1.0",
         "@tauri-apps/api": "2.5.0",
         "@tauri-apps/plugin-log": "2.4.0",
-        "@tauri-apps/plugin-store": "2.2.0",
         "normalize.css": "8.0.1",
         "polished": "4.3.1",
         "react": "18.3.1",
@@ -59,6 +59,7 @@
         "eslint-plugin-vitest": "0.5.4",
         "jsdom": "26.1.0",
         "prettier": "3.5.3",
+        "sass": "1.77.6",
         "typescript": "5.8.3",
         "vite": "6.3.5",
         "vitest": "3.1.4"
