--- a/package.json
+++ b/package.json
@@ -22,18 +22,23 @@
     "dependencies": {
         "@fontsource/roboto": "5.2.6",
         "@fontsource/roboto-mono": "5.2.6",
-        "@fortawesome/fontawesome-free": "5.15.4",
-        "@mui/material": "7.1.1",
-        "@mui/styled-engine-sc": "7.1.1",
+        "@mantine/code-highlight": "8.1.0",
+        "@mantine/core": "8.1.0",
+        "@mantine/form": "8.1.0",
+        "@mantine/hooks": "8.1.0",
+        "@mantine/modals": "8.1.0",
+        "@mantine/notifications": "8.1.0",
+        "@tabler/icons-react": "3.34.0",
         "@tauri-apps/api": "2.5.0",
         "@tauri-apps/plugin-log": "2.4.0",
-        "normalize.css": "8.0.1",
         "polished": "4.3.1",
+        "postcss": "8.5.5",
+        "postcss-preset-mantine": "1.17.0",
+        "postcss-simple-vars": "7.0.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.57.0",
-        "react-toastify": "11.0.5",
-        "styled-components": "6.1.18"
+        "styled-components": "6.1.19"
     },
     "devDependencies": {
         "@swc/plugin-styled-components": "8.0.0",
@@ -59,7 +64,6 @@
         "eslint-plugin-vitest": "0.5.4",
         "jsdom": "26.1.0",
         "prettier": "3.5.3",
-        "sass": "1.77.6",
         "typescript": "5.8.3",
         "vite": "6.3.5",
         "vitest": "3.2.3"
