fix: setup-rust  cache target

--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -29,7 +29,7 @@ runs:
         path: |
           ~/.cargo/registry
           ~/.cargo/git
-          target
+          **/target
         key: ${{ runner.os }}-cargo-${{ inputs.rust-version }}-${{ hashFiles(inputs.cache-dependency-path) }}
         restore-keys: |
           ${{ runner.os }}-cargo-
