ci: fix build webapp for tests and lint

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,7 +61,9 @@ jobs:
           pnpm-version: ${{ env.PNPM_VERSION }}
 
       - name: Run cargo tests
-        run: cargo test --all-targets --all-features
+        run: |
+          pnpm build:ui
+          cargo test --all-targets --all-features
 
   webapp-test:
     runs-on: ubuntu-24.04
