--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,6 +62,7 @@ jobs:
 
       - name: Run cargo tests
         run: |
+          pnpm install --frozen-lockfile
           pnpm build:ui
           cargo test --all-targets --all-features
 
