--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,6 +73,8 @@ jobs:
     if: github.event_name == 'release' || github.event.inputs.build == 'true'
     runs-on: ubuntu-24.04
     needs: [test]
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
