--- a/.github/actions/upload-artifact/action.yml
+++ b/.github/actions/upload-artifact/action.yml
@@ -55,13 +55,14 @@ runs:
         name: ${{ inputs.prefix }}-windows
         path: ${{ inputs.base-folder }}/windows
 
-    - name: Upload to GitHub Release
-      if: github.event_name == 'release'
+    - name: Create a GitHub Release
+      if: startsWith(github.ref, 'refs/tags/')
       shell: bash
       run: |
         if command -v gh >/dev/null 2>&1; then
-          echo "GitHub CLI is installed. Proceeding with upload to GitHub Release."
-          echo "${{ github.token }}" | gh auth login --with-token
+          echo "GitHub CLI is installed. Proceeding with to create a GitHub Release."
+          echo "$GITHUB_TOKEN" | gh auth login --with-token
+          gh release create $GITHUB_REF_NAME --title "$GITHUB_REF_NAME" --notes "Release created from GitHub Actions"
           for folder in ${{ inputs.base-folder }}/*; do
             if [ -d "$folder" ] && [ "$(ls -A "$folder")" ]; then
               echo "Uploading files from: $folder"
