--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,11 +2,10 @@ name: main.yaml
 
 on:
   push:
+    tags:
+      - '*'
     branches:
       - '**'
-  release:
-    types:
-      - published
   workflow_dispatch:
     inputs:
       build:
@@ -70,7 +69,7 @@ jobs:
           cargo test --all-targets --all-features
 
   build:
-    if: github.event_name == 'release' || github.event.inputs.build == 'true'
+    if: startsWith(github.ref, 'refs/tags/') || github.event.inputs.build == 'true'
     runs-on: ubuntu-24.04
     needs: [test]
     permissions:
