fix: manual define pnpm store path to cache

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -23,6 +23,7 @@ runs:
         echo "$HOME/.nvm/versions/node/$(nvm version)/bin" >> $GITHUB_PATH
         corepack enable pnpm
         corepack prepare pnpm@${{ inputs.pnpm-version }} --activate
+        pnpm config set store-dir ~/.pnpm-store
 
     - name: Check Node.JS version
       shell: bash
@@ -36,7 +37,7 @@ runs:
       uses: actions/cache@v4.2.3
       with:
         path: |
-          ~/.local/share/pnpm/store/v10
+          ~/.pnpm-store
           **/node_modules/.pnpm
         key: ${{ runner.os }}-pnpm-store-${{ inputs.pnpm-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
