--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,13 @@
 name: main.yaml
 
 on:
+  release:
+    types:
+      - published
   push:
-    tags:
-      - '*'
     branches:
       - '**'
   workflow_dispatch:
-    inputs:
-      build:
-        description: 'Build binaries for release. Defaults to false.'
-        required: false
-        type: boolean
 
 env:
   NODE_VERSION: '22.14.0'
@@ -69,7 +65,7 @@ jobs:
           cargo test --all-targets --all-features
 
   build:
-    if: startsWith(github.ref, 'refs/tags/') || github.event.inputs.build == 'true'
+    if: (github.event_name == 'release' && github.event.action == 'published') || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-24.04
     needs: [test]
     permissions:
@@ -131,5 +127,6 @@ jobs:
       - name: Upload artifacts
         uses: ./.github/actions/upload-artifact
         with:
+          GITHUB_TOKEN: ${{ github.token }}
           base-folder: dist
           prefix: unichat-${{ steps.setup-version.outputs.revision }}
