--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,17 +82,22 @@ jobs:
           pnpm-version: ${{ env.PNPM_VERSION }}
 
       - name: Setup version
-        id: setup-version
+        id: setup_version
         run: |
-          if [ "${GITHUB_REF_TYPE}" = "tag" ]; then
-            echo "revision=${GITHUB_REF_NAME}" >> $GITHUB_OUTPUT
+          export CARGO_PACKAGE_VERSION="$(cargo pkgid | cut -d# -f2)"
+          if [ "$GITHUB_EVENT_NAME" == "release" ] && [ "$GITHUB_EVENT_ACTION" == "published" ]; then
+            if [ "$CARGO_PACKAGE_VERSION" != "$GITHUB_REF_NAME" ]; then
+              echo "Error: The version in Cargo.toml ($CARGO_PACKAGE_VERSION) does not match the release tag ($GITHUB_REF_NAME)."
+              exit 1
+            fi
+            echo "revision=$GITHUB_REF_NAME" >> $GITHUB_OUTPUT
           else
-            export CARGO_PACKAGE_VERSION="$(cargo pkgid | cut -d# -f2 | cut -d '-' -f1)"
-            echo "revision=${CARGO_PACKAGE_VERSION}+${GITHUB_SHA}" >> $GITHUB_OUTPUT
+            export SHORT_CARGO_VERSION="$(echo $CARGO_PACKAGE_VERSION | cut -d '-' -f1)"
+            echo "revision=$SHORT_CARGO_VERSION+$GITHUB_SHA" >> $GITHUB_OUTPUT
           fi
 
       - name: Print revision
-        run: echo "Revision is ${{ steps.setup-version.outputs.revision }}"
+        run: echo "Revision is ${{ steps.setup_version.outputs.revision }}"
 
       - name: Run build for linux
         run: |
