--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: main.yaml
 on:
   release:
     types:
-      - published
+      - created
   push:
     branches:
       - '**'
@@ -65,7 +65,7 @@ jobs:
           cargo test --all-targets --all-features
 
   build:
-    if: (github.event_name == 'release' && github.event.action == 'published') || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-24.04
     needs: [test]
     permissions:
@@ -85,7 +85,7 @@ jobs:
         id: setup_version
         run: |
           export CARGO_PACKAGE_VERSION="$(cargo pkgid | cut -d# -f2)"
-          if [ "$GITHUB_EVENT_NAME" == "release" ] && [ "$GITHUB_EVENT_ACTION" == "published" ]; then
+          if [ "$GITHUB_EVENT_NAME" == "release" ]; then
             if [ "$CARGO_PACKAGE_VERSION" != "$GITHUB_REF_NAME" ]; then
               echo "Error: The version in Cargo.toml ($CARGO_PACKAGE_VERSION) does not match the release tag ($GITHUB_REF_NAME)."
               exit 1
