--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,6 @@ serde_json = "1.0.140"
 showfile = "0.1.1"
 tauri = { version = "2.5.1", features = [] }
 tauri-plugin-log = "2.5.0"
+tauri-plugin-opener = "2.3.0"
 tauri-plugin-store = "2.2.1"
 tokio = "1.45.1"
