--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tabler/icons-react": "3.34.0",
         "@tauri-apps/api": "2.5.0",
         "@tauri-apps/plugin-log": "2.5.0",
+        "@tauri-apps/plugin-opener": "2.3.0",
         "polished": "4.3.1",
         "postcss": "8.5.6",
         "postcss-preset-mantine": "1.17.0",
