--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@tauri-apps/api": "2.5.0",
         "@tauri-apps/plugin-log": "2.5.0",
         "@tauri-apps/plugin-opener": "2.3.0",
+        "clsx": "2.1.1",
         "polished": "4.3.1",
         "postcss": "8.5.6",
         "postcss-preset-mantine": "1.17.0",
