fix: upload artifact prefix version

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -136,4 +136,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ github.token }}
           base-folder: dist
-          prefix: unichat-${{ steps.setup-version.outputs.revision }}
+          prefix: unichat-${{ steps.setup_version.outputs.revision }}
