--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ tauri-plugin-log = "2.6.0"
 tauri-plugin-opener = "2.4.0"
 tauri-plugin-store = "2.3.0"
 tokio = "1.45.1"
-ureq = "3.0.12"
+ureq = { version = "3.0.12", features = ["json"] }
