--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tauri-build = { version = "2.0.2", features = [] }
 actix-web = "4.11.0"
 actix-ws = "0.3.0"
 log = "0.4.27"
+regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tauri = { version = "2.6.1", features = [] }
