--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tauri-build = { version = "2.3.0", features = [] }
 actix-web = "4.11.0"
 actix-ws = "0.3.0"
 log = "0.4.27"
+moka = { version = "0.12.10", features = ["sync"] }
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
