--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,11 @@ tauri-build = { version = "2.3.0", features = [] }
 [dependencies]
 actix-web = "4.11.0"
 actix-ws = "0.3.0"
+futures = "0.3.31"
+irc = { version = "1.1.0", default-features = false, features = ["encoding", "serde", "rustls-native-certs", "tokio-rustls"] }
 log = "0.4.27"
 moka = { version = "0.12.10", features = ["sync"] }
+rand = "0.9.1"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
@@ -29,4 +32,4 @@ tauri-plugin-log = "2.6.0"
 tauri-plugin-opener = "2.4.0"
 tauri-plugin-store = "2.3.0"
 tokio = "1.45.1"
-ureq = { version = "3.0.12", features = ["json"] }
+ureq = { version = "3.0.12", features = ["json", "rustls"] }
