--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,5 +31,5 @@ tauri = { version = "2.6.2", features = [] }
 tauri-plugin-log = "2.6.0"
 tauri-plugin-opener = "2.4.0"
 tauri-plugin-store = "2.3.0"
-tokio = "1.45.1"
+tokio = { version = "1.45.1", features = ["full"] }
 ureq = { version = "3.0.12", features = ["json", "rustls"] }
