--- a/src/actix/static/index.html.template
+++ b/src/actix/static/index.html.template
@@ -34,14 +34,15 @@
             document.addEventListener("DOMContentLoaded", () => {
                 function connect() {
                     const socket = new WebSocket('ws://localhost:9527/ws')
-                    socket.addEventListener("message", function (message) {
+
+                    socket.addEventListener("open", () => {
+                        window.dispatchEvent(new CustomEvent("unichat:connected"));
+                    })
+
+                    socket.addEventListener("message", (message) => {
                         const event = JSON.parse(message.data);
 
-                        if (event.type === "unichat:load") {
-                            window.dispatchEvent(new CustomEvent("unichat:load", { detail: event.data }));
-                        } else {
-                            window.dispatchEvent(new CustomEvent("unichat:event", { detail: event }));
-                        }
+                        window.dispatchEvent(new CustomEvent("unichat:event", { detail: event }));
                     });
 
                     socket.addEventListener("close", () => {
@@ -56,7 +57,10 @@
                 }
 
                 connect();
-
+            });
+        </script>
+        <script defer>
+            document.addEventListener("DOMContentLoaded", () => {
                 {{WIDGET_SCRIPT}}
             });
         </script>
