--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,11 +5,11 @@
     "scripts": {
         "dev": "tauri dev",
         "build": "tauri build",
-        "dev:ui": "vite -c ./webapp/vite.config.js",
-        "build:ui": "vite -c ./webapp/vite.config.js build",
-        "preview": "vite -c ./webapp/vite.config.js preview",
+        "dev:ui": "vite",
+        "build:ui": "vite build",
+        "preview": "vite preview",
         "lint": "eslint --ext ts,tsx ./webapp/src",
-        "test": "vitest -c ./webapp/vite.config.js"
+        "test": "vitest"
     },
     "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "pnpm": {
@@ -43,7 +43,6 @@
     },
     "devDependencies": {
         "@swc/plugin-styled-components": "8.0.2",
-        "@tauri-apps/cli": "2.6.2",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@types/node": "22.15.21",
