--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,7 @@ env:
   NODE_VERSION: '22.14.0'
   PNPM_VERSION: '10.7.1'
   RUST_VERSION: '1.87.0'
+  OLDPWD: ${{ github.workspace }}
 
 jobs:
   lint:
