--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,8 +3,6 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "tauri dev",
-        "build": "tauri build",
         "dev:ui": "vite",
         "build:ui": "vite build",
         "preview": "vite preview",
@@ -32,6 +30,7 @@
         "@tauri-apps/plugin-log": "2.6.0",
         "@tauri-apps/plugin-opener": "2.4.0",
         "clsx": "2.1.1",
+        "marked": "16.0.0",
         "polished": "4.3.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
