--- a/.github/actions/setup-tauri/action.yml
+++ b/.github/actions/setup-tauri/action.yml
@@ -31,7 +31,7 @@ runs:
       shell: bash
       run: |
         sudo apt update
-        sudo apt install --no-install-recommends -y libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
+        sudo apt install -y libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
         if [[ -z "$(command -v tq 2>/dev/null)"  ]]; then
           echo "Installing tq..."
           cargo install tomlq --locked
