--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ edition = "2021"
 custom-protocol = ["tauri/custom-protocol"]
 
 [build-dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
 tauri-build = { version = "2.3.1", features = [] }
+ureq = { version = "3.0.12", features = ["json", "rustls"] }
 
 [dependencies]
 actix-web = "4.11.0"
